# uplim-lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.render  LICENSE  README.md  README_RENDER.md  app.py  casa.upl  cloudbuild.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  server.py  test_const_range_gen.js  test_for_in_gen.js  test_lexer_v02.upl  test_match_gen.js  test_natural.upl  test_readable_style_gen.js  test_short_syntax_gen.js  test_state_with_gen.js  test_uplim.py  test_v02.upl  test_web.upl  test_web_gen.js  tsconfig.base.json  tsconfig.json  uplim.ai.md  uplim.config.ts
.serena/: project.yml
app/: layout.tsx  page.tsx
crates/: README.md
docs/: ai-evolution-system.md  ai-native-architecture.md  autonomous-engine-guide.md  engine-architecture.md  engine-complete-specification.md  engine-full-specification.md  engine-specification.md  execution-roadmap.md  features.md  file-and-module-conventions.md  gap-analysis.md  index.md  language-engineering-foundations.md  license.md  notebooklm-research-summary.md  production-architecture.md  project-architecture.md  roadmap.md  standard-library.md  std-ai-api.md  style-guide.md  toolchain-contracts.md  ui-component-mini-spec.md  uplim-core-specification.md
engine/: README.md  changelog.upl  package-lock.json  package.json  test.upl  tester.upl
examples/: analyzer.upl  docsync.upl  grammar_evolver.upl  hello_world.upl  ideology_guard.upl  new_features.upl  self_engine.upl  test.upl  test_any_downcast_error.upl  test_const_range.upl  test_errors.upl  (+11 more)
(+773 files in other folders)
